--- a/admin/style.css
+++ b/admin/style.css
@@ -1,31 +1,32 @@
 * {
-	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
-	font-size: 16px;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
+  font-size: 16px;
 }
 
 body {
-	background-color: #435165;
-	margin-left:500px;
-    margin-top: 100px;
-    margin-right:500px;
-    background-color:floralwhite;
- 
+  background-color: #435165;
+  margin-left: 500px;
+  margin-top: 100px;
+  margin-right: 500px;
+  background-color: floralwhite;
+
 }
 
 /*
 */
 
 .form-group {
-	margin-bottom: 20px;
-    background-color: wheat;
-     
+  margin-bottom: 20px;
+  background-color: wheat;
+
 }
-form{
-    background-color:white;
-    box-shadow: 2px 2px 2px 2px lightblue;
-    border-radius: 5px;
-    padding: 15px;
+
+form {
+  background-color: white;
+  box-shadow: 2px 2px 2px 2px lightblue;
+  border-radius: 5px;
+  padding: 15px;
 }
 
 .input-group {
@@ -38,63 +39,66 @@ form{
 
 input[type="text"],
 input[type="email"],
-input[type="password"] , textarea  {
+input[type="password"],
+textarea {
   width: 100%;
-    height: 35px;
-    border: 1px solid dodgerblue;
-    border-radius: 5px;
-    color: dodgerblue;
-     position: relative;
+  height: 35px;
+  border: 1px solid dodgerblue;
+  border-radius: 5px;
+  color: dodgerblue;
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   align-items: stretch;
 
-    
+
 }
 
 input[type="submit"] {
-	background-color: #4CAF50;
-	color: #fff;
-	padding: 10px 20px;
-	border: none;
-	border-radius: 4px;
-	cursor: pointer;
+  background-color: #4CAF50;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
-input[type="text"], input[type="email"], textarea {
+
+input[type="text"],
+input[type="email"],
+textarea {
   width: 300px;
 }
 
 input[type="submit"]:hover {
-	background-color: #3e8e41;
+  background-color: #3e8e41;
 }
+
 .navbar {
-    max-width: 900px;
-    width: 100%;
-    height: 50px;
-    position: fixed;
-    top: 0;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: ;
+  max-width: 900px;
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  top: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: ;
 }
 
 .navbar li {
-    float: left;
-    
+  float: left;
+
 }
 
 .navbar li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-     color: black;
-   
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  color: black;
+
 }
 
-.navbar li a:hover {
-   
-}
+.navbar li a:hover {}
